force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/LM_Autocrat_Process_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Autocrat Process Setting</label>
    <pluralLabel>Autocrat Process Settings</pluralLabel>
</CustomObject>