force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <label>Attachment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>