force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Custo_Fixo_BT__c.field-meta.xml
<CustomField>
    <fullName>Custo_Fixo_BT__c</fullName>
    <description>O custo fixo do Aluguer de Barras de Tejadilho após 30 dias.</description>
    <label>Custo Fixo BT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>