force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Email_Attachment_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Attachment_Template__c</fullName>
    <label>Email Attachment Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>