force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Email_BCC__c.field-meta.xml
<CustomField>
    <fullName>Email_BCC__c</fullName>
    <label>Email BCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>