force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Email_CC__c</fullName>
    <label>Email CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>