force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Email_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>Email_de_Envio__c</fullName>
    <label>Email de Envio</label>
    <type>Email</type>
</CustomField>