force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Email_Static_File_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Email_Static_File_Attachment__c</fullName>
    <label>Email Static File Attachment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>