force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Email_Template_After_Token__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_After_Token__c</fullName>
    <label>Email Template After Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>