force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/GDrive_Process_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>GDrive_Process_Folder_Name__c</fullName>
    <label>GDrive Process Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>