force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Order_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Record_Type__c</fullName>
    <label>Order Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>