force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Process_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Process_Guidelines__c</fullName>
    <label>Process Guidelines</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>