force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Process_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Process_Prefix__c</fullName>
    <label>Process_Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>