force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Promessa_a_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Promessa_a_Cliente__c</fullName>
    <label>Promessa a Cliente</label>
    <type>Email</type>
</CustomField>