force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Send_Email_After_Token__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_After_Token__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Email After Token</label>
    <type>Checkbox</type>
</CustomField>