force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/SendSMS__c.field-meta.xml
<CustomField>
    <fullName>SendSMS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SendSMS</label>
    <type>Checkbox</type>
</CustomField>