force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/SMS_From__c.field-meta.xml
<CustomField>
    <fullName>SMS_From__c</fullName>
    <label>SMS From</label>
    <type>Phone</type>
</CustomField>