force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/SMS_Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template_API_Name__c</fullName>
    <label>SMS Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>