force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Static_Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Static_Attachment_Name__c</fullName>
    <label>Static Attachment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>