force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Supervisao_de_Caixa__c.field-meta.xml
<CustomField>
    <fullName>Supervisao_de_Caixa__c</fullName>
    <label>Supervisão de Caixa</label>
    <type>Email</type>
</CustomField>