force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Token_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Token_Template_Name__c</fullName>
    <label>Token Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>