force-app/main/default/objects/LM_Autocrat_Process_Setting__mdt/fields/Valor_Deslocacao__c.field-meta.xml
<CustomField>
    <fullName>Valor_Deslocacao__c</fullName>
    <label>Valor Deslocacao</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>